--- a/docs/notes/2024.md
+++ b/docs/notes/2024.md
@@ -19,6 +19,13 @@
 
 为了原始的模板尽可能的接近，我重新进行了修订，得到 [nsfc_se](https://github.com/huangjunjie-cs/nsfc-se)
 
+| NSFC | NSFC-SE |
+| :----: | :----: | 
+|![](../gh-pages/galleries/青年基金2024.pdf-1.jpg) | ![](../gh-pages/galleries/青年基金2024-se.pdf-1.jpg) |
+|![](../gh-pages/galleries/青年基金2024.pdf-2.jpg) | ![](../gh-pages/galleries/青年基金2024-se.pdf-2.jpg) |
+|![](../gh-pages/galleries/青年基金2024.pdf-3.jpg) | ![](../gh-pages/galleries/青年基金2024-se.pdf-3.jpg) |
+
+
 
 ## 系统提交
 
