--- a/sections/一1依据.tex
+++ b/sections/一1依据.tex
@@ -49,9 +49,9 @@
 图片的例子：
 \begin{figure}[h]
 \centering %图片居中
-\includegraphics[width=5cm]{figures/wechatgroup}
+\includegraphics[width=5cm]{figures/banner.jpg}
 \captionsetup{justification=centering} %图题居中
-\caption{这是图题。}
+\caption{这是NSFC。}
 \end{figure}
 图题和表头若想取消加粗，去掉nsfc.sty中caption部分的\verb|\bfseries|即可。
 
