docs: add example figures

--- a/docs/notes/2024.md
+++ b/docs/notes/2024.md
@@ -21,9 +21,9 @@
 
 | NSFC | NSFC-SE |
 | :----: | :----: | 
-|![](../gh-pages/galleries/青年基金2024.pdf-1.jpg) | ![](../gh-pages/galleries/青年基金2024-se.pdf-1.jpg) |
-|![](../gh-pages/galleries/青年基金2024.pdf-2.jpg) | ![](../gh-pages/galleries/青年基金2024-se.pdf-2.jpg) |
-|![](../gh-pages/galleries/青年基金2024.pdf-3.jpg) | ![](../gh-pages/galleries/青年基金2024-se.pdf-3.jpg) |
+| ![](../gh-pages/galleries/青年正文2024.pdf-1.jpg) | ![](../gh-pages/galleries/青年正文2024-se.pdf-1.jpg) |
+| ![](../gh-pages/galleries/青年正文2024.pdf-2.jpg) | ![](../gh-pages/galleries/青年正文2024-se.pdf-2.jpg) |
+| ![](../gh-pages/galleries/青年正文2024.pdf-3.jpg) | ![](../gh-pages/galleries/青年正文2024-se.pdf-3.jpg) |
 
 
 
