docs: add make_demo.py

--- a/docs/notes/2024.md
+++ b/docs/notes/2024.md
@@ -17,13 +17,44 @@
 
 ## Latex Writing
 
-为了原始的模板尽可能的接近，我重新进行了修订，得到 [nsfc_se](https://github.com/huangjunjie-cs/nsfc-se)
+为了原始的模板尽可能的接近，我重新进行了修订，得到 [nsfc_se](https://github.com/huangjunjie-cs/nsfc-se)。
 
-| NSFC | NSFC-SE |
-| :----: | :----: | 
-| ![](../gh-pages/galleries/青年正文2024.pdf-1.jpg) | ![](../gh-pages/galleries/青年正文2024-se.pdf-1.jpg) |
-| ![](../gh-pages/galleries/青年正文2024.pdf-2.jpg) | ![](../gh-pages/galleries/青年正文2024-se.pdf-2.jpg) |
-| ![](../gh-pages/galleries/青年正文2024.pdf-3.jpg) | ![](../gh-pages/galleries/青年正文2024-se.pdf-3.jpg) |
+
+
+
+```{raw} html
+<object
+  data="/nsfc-se/examples/青年正文2024.pdf"
+  type="application/pdf"
+  width="100%"
+  height="900px"
+  aria-labelledby="nsfc"
+>
+  <p>
+    Your browser does not support PDFs.
+    <a href="/nsfc-se/examples/青年正文2024.pdf"
+      >Download the PDF</a
+    >
+  </p>
+</object>
+```
+
+```{raw} html
+<object
+  data="/nsfc-se/examples/青年正文2024-se.pdf"
+  type="application/pdf"
+  width="100%"
+  height="900px"
+  aria-labelledby="nsfc-se"
+>
+  <p>
+    Your browser does not support PDFs.
+    <a href="/nsfc-se/examples/青年正文2024-se.pdf"
+      >Download the PDF</a
+    >
+  </p>
+</object>
+
 
 
 
